--- a/grid.html
+++ b/grid.html
@@ -416,6 +416,7 @@
 			$('h2').hide();
 			$('.err').removeClass('err');
 		}
+		GridResultsShow = show;
 	}
 	function colArgs(col) {
 		return cvtArg(col.data('cond'));    
@@ -518,7 +519,9 @@
 		showHdResults(false);
 	});
 
-	if (BackFrom == 'curve') {
+	if (BackFrom == 'curve' && window['GridResultsShow']) {
 		results();
+	} else {
+		delete GridResultsShow;
 	}
 </script>
