--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				P.ctx.beginPath();
 				for (let x=0; rnd(x,2)<=P.stepX*P.cntX; x+=P.stepX/100) {
 					const y = fn(P.xCvt(x));	          
-					if ( y <= P.stepY*P.cntY) {
+					if ( y <= P.yMax(x)) {
 						console.log(rnd(P.xCvt(x),2)+','+rnd(y,2));
 						P.ctx.lineTo(xPos(x), yPos(y));		
 					}		
@@ -142,6 +142,7 @@
 				P = $.extend({
 					m: new Map(),
 					xCvt: x => x,
+					yMax: x => P.stepY*P.cntY
 				},P);
 				P.m = new Map();
 				const ctx = P.ctx = P.cnv.getContext('2d');
