--- a/curve.html
+++ b/curve.html
@@ -1,21 +1,28 @@
 <style>
-	canvas {
-		background-color: black;
+
+	#container button {
+		margin: .5rem 0;
 	}
-	#plot {
-		display: none;
-	}
+
+/* table */
+
 	th {
 		text-align: left;
 	}
 	th:first-child, td:first-child {
 		padding-right: 1rem;
 	}
-	td>* {
+	td > * {
 		display: block;
 	}
-	#container button {
-		margin: .5rem 0;
+
+/* plot */
+
+	canvas {
+		background-color: black;
+	}
+	#plot {
+		display: none;
 	}
 	#plot td:first-child {
 		color: #5d9300;
@@ -23,7 +30,7 @@
 	#plot td:last-child {
 		text-align: right;
 	}
-}
+
 </style>
 <div>
 	<h1>System Head Curve</h1>
