--- a/curve.html
+++ b/curve.html
@@ -71,6 +71,18 @@
 </div>
 
 <script>//# sourceURL=*curve
+
+// ctls 
+
+	function inpChg() {		
+		$('#plot').hide();
+		Cnv.width+=0;
+		showHdBtn('show');
+		Curve.C = pg('#C').val();
+		Curve.plot = $.makeArray(ptsInp().map((i,v)=>$(v).val()));
+		saveProp('curve',Curve);
+	}
+
 	function selCond(e) {
 		const 	c = $(e).find(':selected').data('cond'),
 				inp = $(e).parent().parent().find('input');
@@ -78,9 +90,13 @@
 		setVal(inp.last(),rnd(c.head));	
 		inpChg();
 	}
+
 	function showHdBtn(show) {
 		pg('button')[show]();
 	}
+
+// plot
+
 	function steps(v1,v2) {
 		const 	max = Math.max(v1,v2),
 				m10 = Math.pow(10, Math.floor(Math.log10(max / 15))),
@@ -110,6 +126,8 @@
 		curve(x => hS+k*Math.pow(x,1.9));				
 	}
 
+// init 
+
 	Conds.filter(c => c.grid).forEach(c => {
 	  pg('select').append($(`<option>${c.name}</option>`).data('cond',c));		
 	});
@@ -120,14 +138,6 @@
 		return pg('#points input');
 	}
 
-	function inpChg() {		
-		$('#plot').hide();
-		Cnv.width+=0;
-		showHdBtn('show');
-		Curve.C = pg('#C').val();
-		Curve.plot = $.makeArray(ptsInp().map((i,v)=>$(v).val()));
-		saveProp('curve',Curve);
-	}
 	pg('input').change(ev => {
 		vdGt(ev.target);
 		inpChg();
@@ -135,14 +145,13 @@
 	ptsInp().change(ev => {
 		pg('select :disabled')[pparIdx(ev.target,-1)].selected=true;
 	});
-	
-	
+
 	function showUnit(txt,u) {
 		pg(`th:contains(${txt})`).append(em(unit(u)));
 	}
-	
 	showUnit('Flow',FLOW);
 	showUnit('Head',DIST);
+
 	setVal($('#C'),Curve.C);
 	Curve.plot.forEach((v,i) => {
 		setVal(ptsInp().eq(i),rnd(v));
