--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 				'm^3/s':15850.32316, 'ft^3/s':448.8311693, _num:0};
 			POWER = {kW:1.341022218, _num:1}
 			DIST = {m:3.280839895, inches: 1/12, mm: 3.280839895/1000, _num:2};
-			DIST_small = {m: 'mm', ft: 'inches'}
+			DIST_small = {m: 'mm', ft: 'inches'};
 			PRESSURE = {kPa:0.145037738007,m:1.42197020632,ft:0.433527501928,_num:3};
 
 			function unit(m) {
