--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 	<title>Pumping System Assessment Tool</title>
 	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 		<style>
+
+		/* label */
+
+			h1, em, .fa-question-circle {
+				color: #5d9300;
+			}
+
 			em, dialog label {
 				font-size: .75rem;
 				font-style: italic;
@@ -19,6 +26,8 @@
 				display: block;
 			}
 
+		/* input */
+
 			[type=checkbox]:hover {
 				cursor: pointer;
 			}
@@ -27,6 +36,8 @@
 				border: solid 1px #fff;
 				box-shadow: inset 1px 1px 2px 0 #5E6A71;
 			}
+
+		/* button */
 
 			.prime {
 				color: white;
@@ -44,9 +55,7 @@
 				cursor: pointer;
 			}
 
-			h1, em, .fa-question-circle {
-				color: #5d9300;
-			}
+		/* table */
 
 			th,.th {
 				color: #5d9300;
@@ -57,10 +66,14 @@
 			td {
 				white-space: nowrap;
 			}
+
+		/* layout */
+
 			.flxwd {
 				display:flex; 
 				justify-content: space-between;
 			}
+
 			#container {
 				padding:0 5%;
 			}
@@ -83,6 +96,7 @@
 				font-family: sans-serif;
 				font-size: 14pt;
 			}
+			
 		</style>
 	</head>
 	<body> 
