--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 			}
 			function setupPlot(lblX,lblY) {
 				P = $.extend({
-					cnv: dom('Canvas'),
+					cnv: dom('canvas'),
 					m: new Map(),
 					xCvt: x => x,
 					yMax: x => P.stepY*P.cntY
