--- a/grid.html
+++ b/grid.html
@@ -332,11 +332,7 @@
 		$(e).next().toggle($(e).val()=='Custom');
 	}
 	function pumpChg(e) {
-		if ($(e).val().startsWith('Specified')) {
-			$(e).next().show();      
-		} else {
-			$(e).next().hide();
-		}
+		$(e).next().toggle($(e).val().startsWith('Specified'));
 	}
 	function selMRP(btn) {
 		const opts = {
