--- a/grid.html
+++ b/grid.html
@@ -320,7 +320,7 @@
 	}
 
 	function fldUnit(nm) {
-		$(`td>div:contains(${nm})`).append(`<em>(${txt})</em>`);
+		$(`td>div:contains(${nm})`).append(em(txt));
 	}  
 
 // ctls
