--- a/motor_perf.html
+++ b/motor_perf.html
@@ -66,9 +66,9 @@
 		ctx.fillText("Current (% FLC)",P.cnv.width-P.padX,P.padY-5-30);
 
 		P.getYobj = x => 
-			Bridge.motorPerformance(cvtArg(setData({
+			api('motorPerformance',{
 				load_factor: (x==0 ? .1 : x)/100
-			})));
+			});
 		curveMulti('efficiency');
 		curveMulti('current','white');
 		curveMulti('pf','#1F82BB');		
