--- a/main.html
+++ b/main.html
@@ -77,8 +77,9 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 	function imprt() {
 		Dlg.showOpenDialog(dlgFil(),
 			function (fn) {
-				if (fn ) {
-					[,Units,HeadTool,Curve,MotorPerf,DefCond,Conds]=JSON.parse(require('fs').readFileSync(fn[0],'utf8'));					
+				if (fn) {
+					[,Units,HeadTool,Curve,MotorPerf,DefCond,Conds] =
+						JSON.parse(require('fs').readFileSync(fn[0],'utf8'));					
 					save();
 					loadPg();	
 				}
@@ -89,7 +90,8 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 		Dlg.showSaveDialog(dlgFil(),
 			function (fn) {
 				if (fn) {					
-					require('fs').writeFile(fn,JSON.stringify([process.env.npm_package_version,Units,HeadTool,Curve,MotorPerf,DefCond,Conds]));				
+					require('fs').writeFile(fn,JSON.stringify(
+						[process.env.npm_package_version,Units,HeadTool,Curve,MotorPerf,DefCond,Conds]));				
 				}
 		}); 
 	}
