--- a/units.html
+++ b/units.html
@@ -105,7 +105,7 @@
 
 <script>
 
-	function chgUnits(nunits) {
+	function chgUnits(nunits) {// convert all saved data to new units
 		function chg(m,...args) {
 			cvtObj(...args,m,nunits[m._num]);
     	}
@@ -138,7 +138,7 @@
 		$('td').removeClass('shade');
 		$(`#units td:nth-child(${n})`).addClass('shade');		
 	}
-	function showCus(lastCol) {
+	function showCus(lastCol) {// show custom
 		lastCol.find('select').each(function(i,e) {
 			$(e).val(Units[i]);
 		});
@@ -148,8 +148,8 @@
 // init
 
 	{
-		const lastCol = $('#units th:nth-child(4),#units td:nth-child(4)');
-		const met = ['m^3/hr','kW','m','kPa'];
+		const lastCol = $('#units th:nth-child(4),#units td:nth-child(4)');// last column
+		const met = ['m^3/hr','kW','m','kPa'];// metric
 		let i;
 		switch (Units.toString()) {
 			case IMP.toString():
