--- a/conditions.html
+++ b/conditions.html
@@ -113,7 +113,7 @@
 		go('notes');
 	}	
 
-	function xprt() {		
+	function xprt() {// selective export
 		Dlg.showSaveDialog(dlgFil('csv'),
 			function (fn) {
 				if (fn) {					
